# mcp-gsc-oauth

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.agent/rules/: environment-variables.md  use-astral.md
examples/: analytics_report.py  basic_usage.py
src/mcp_gsc/: __init__.py  auth.py  prompts.py  resources.py  server.py  tools.py  utils.py
